[JPA][JC and Joseph] feature: implement pagination